@@ -113,7 +113,7 @@ public class CReportSerienbriefAdressen extends CCommand implements CReport {
         clip.setContents(new StringSelection(text), null);
         String path = new File(vorlagen + "/Verteiler.dot").getAbsolutePath();
         try {
-            Runtime.getRuntime().exec(excel + "/winword.exe -t\"" + path + "\"");
+            new ProcessBuilder(excel + "/winword.exe -t\"" + path + "\"").start();
         } catch (IOException e1) {
             LOGGER.log(Level.SEVERE, "Failed to launch Word for Serienbrief", e1);
         }
